# tinyAlgebra

./: .gitignore  CMakeLists.txt  tinyAlgebra.sln  tinyAlgebra.vcxproj  tinyAlgebra.vcxproj.filters
include/tinyalgebra/: Camera.hpp
include/tinyalgebra/math/: Matrix.hpp  Utility.hpp
include/tinyalgebralib/: Camera.hpp
include/tinyalgebralib/math/: Matrix.hpp  Utility.hpp  Vector.hpp  gradient.hpp  math.hpp  type_decl.hpp
src/: Camera.cpp
src/Camera/: Camera.cpp  Camera.h  Camera.hpp
src/MarchingCubes/: MarchingCubes.cpp  MarchingCubes.hpp  sdf.cpp  sdf.hpp
src/Octree/: BoundingBox.cpp  BoundingBox.hpp  Octree.cpp  Octree.hpp
src/glm/detail/: setup.hpp
src/math/: Matrix.hpp  Utility.hpp  Vector.cpp  Vector.hpp  gradient.hpp  math.cpp  math.hpp
tests/: vector_test.cpp
